[package]
name = "tumul"
version = "0.1.0"
edition = "2024"
authors = ["Alberto Colombo <albx79@gmail.com>"]
description = "A minimal Tumul interpreter and parser in Rust"
license = "MIT"
readme = "README.md"

[dependencies]
regex = "1.10"
lalrpop-util = { version = "0.23.1", features = ["unicode"] }
log = "0.4.29"
env_logger = "0.11.10"

[build-dependencies]
lalrpop = "0.23.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
